testdata/operators/pass/operator_implicit.dws
// Ported from: reference/dwscript-original/Test/OperatorOverloadPass/operator_implicit.pas
// Purpose: Test implicit conversion from Integer and Float to String
// Expected: Automatic type conversion in String assignments

operator implicit (Integer) : String uses IntToStr;

var s : String;

s := 123;

PrintLn(s);

function MyFloatToStr(f : Float) : String;
begin
   Result := f.ToString(2);
end;

operator implicit (Float) : String uses MyFloatToStr;

s := Pi;

PrintLn(s);
